# CSC14120-ParallelProgramming

./: .gitignore  CMakeLists.txt  README.md  debai.txt  execute.ipynb  linear_svc_classifier.ipynb  svm_libsvm_classifier.ipynb
include/: autoencoder.h  gpu_info.h
include/common/: cifar10_dataset.h  gpu_info.h
include/cpu/: feature_extractor.h  layers.h  trainer.h
include/gpu/: gpu_autoencoder.h  gpu_autoencoder_v2.h  gpu_constants.h  gpu_layers.cuh  gpu_layers_v2.cuh  gpu_trainer.h  gpu_trainer_v2.h
include/gpu1/: gpu1_autoencoder.h  gpu1_layers.cuh  gpu1_trainer.h
include/gpu2/: gpu2_autoencoder.h  gpu2_layers.cuh  gpu2_trainer.h
scripts/: run_extract_features.sh
src/: autoencoder.cpp  feature_extractor.cpp  layers.cpp  main.cu  trainer.cpp
src/common/: cifar10_dataset.cpp  gpu_info.cu
src/cpu/: autoencoder.cpp  feature_extractor.cpp  layers.cpp  trainer.cpp
src/gpu/: gpu_autoencoder.cu  gpu_autoencoder_v2.cu  gpu_layers.cu  gpu_layers_v2.cu  gpu_trainer.cu  gpu_trainer_v2.cu
src/gpu1/: gpu1_autoencoder.cu  gpu1_layers.cu  gpu1_trainer.cu
src/gpu2/: gpu2_autoencoder.cu  gpu2_layers.cu  gpu2_trainer.cu
